-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6
-
None
-
-
3
-
0bf0422a6 (dev), 11de3511d (6.5), e80e914b2 (6.6)
-
Foundation Sprint 86
This can be observed on the SatelliteInfo example.
When running the example in the Simulation mode, do the following:
- Press the "Stop" button to stop the simulation.
- Press the "Single" button to request a single update - it's shown correctly.
- Press the "Start" button again - the satellite info would not update anymore, even though the position info keeps updating.
- resulted from
-
QTBUG-114657 [SatelliteInfo] The app stops responding after some time on macOS
-
- Closed
-
| For Gerrit Dashboard: QTBUG-115217 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 491046,2 | QDeclarativeSatelliteSource: update active state before starting updates | dev | qt/qtpositioning | Status: MERGED | +2 | 0 |
| 491282,2 | QDeclarativeSatelliteSource: update active state before starting updates | 6.6 | qt/qtpositioning | Status: MERGED | +2 | 0 |
| 491283,2 | QDeclarativeSatelliteSource: update active state before starting updates | 6.5 | qt/qtpositioning | Status: MERGED | +2 | 0 |