QDeclarativeSatelliteSource: update active state before starting updates

When requesting a single update, we used to update the active state
after calling requestUpdate() on the underlying implementation.
In most cases it was fine, because the actual update comes
asynchronously, and the active state is reset back to inactive once the
update is received.

However, such approach does not work with the NMEA simulation mode,
because in this mode the requestUpdate() call is synchronous, so we
immediately get an update, and only after that set the active state,
which is an error.

This logic could also work incorrectly if the requestUpdate() call
triggers an errorOccurred() signal.

This patch updates the code to set the active state before requesting
the updates.
The same logic update is also done in the method which starts regular
updates, although it's not so critical there.

Task-number: QTBUG-115217
Change-Id: I30e8665185684bc3d29cc95b5faee748282774f5
Reviewed-by: Ievgenii Meshcheriakov <ievgenii.meshcheriakov@qt.io>
(cherry picked from commit 0bf0422a619adf5d6b8a8912ab69184a132cdde6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>